--- a/maven/cloud.corin.feedback/releng/cloud.corin.feedback.configuration/pom.xml
+++ b/maven/cloud.corin.feedback/releng/cloud.corin.feedback.configuration/pom.xml
@@ -7,7 +7,8 @@
 	<properties>
 		<tycho.version>1.4.0</tycho.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipse-repo.url>jar:file:/home/uri/Downloads/aqua3.1.29.update.site-20200110.zip!/</eclipse-repo.url>
+		<eclipse-repo.url>jar:file:/update-sites/aqua-update-site.zip!/idz-15.0.x/update.site/</eclipse-repo.url>
+		<!-- <eclipse-repo.url>jar:file:/update-sites/aqua-update-site.zip!/</eclipse-repo.url> -->
 	</properties>
 	<repositories>
 		<repository>
